Fixed round Image Alignment, Added stretch animation goal

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -1,267 +1,281 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+    /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-
-/* HTML5 display-role reset for older browsers */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-    display: block;
-}
-
-body {
-    line-height: 1;
-}
-
-ol,
-ul {
-    list-style: none;
-}
-
-blockquote,
-q {
-    quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-    content: '';
-    content: none;
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-
-/* Set every element's box-sizing to border-box */
-
-* {
-    box-sizing: border-box;
-}
-
-html,
-body {
-    height: 100%;
-    font-family: 'Titillium Web', sans-serif;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
-    margin-bottom: 15px;
-}
-
-
-/* Your code starts here! */
-
-body {
-    max-width: 900px;
-    margin: 0px 50px;
-}
-
-nav {
-    display: inline-block;
-    margin: 20px;
-}
-
-nav a {
-    color: lightgrey;
-    margin: 0px 50px 0px 0px;
-    text-decoration: none;
-}
-
-.logo {
-    display: inline-block;
-    position: absolute;
-    left: 60%;
-    margin: 5px 0px;
-}
-
-.button {
-    border: 1px solid black;
-    display: block;
-    width: 150px;
-    height: 30px;
-    text-align: center;
-    padding: 5px;
-    margin: 0px 0px 60px 150px;
-}
-
-.button a {
-    text-decoration: none;
-    color: black;
-}
-
-.slogan {
-    display: inline-block;
-    width: 48%;
-}
-
-.slogan h1 {
-    font-size: 80px;
-    text-align: center;
-}
-
-.image {
-    display: inline-block;
-    width: 48%;
-    padding: 70px;
-}
-
-.features {
-    display: inline-block;
-    width: 48%px;
-    margin: 5px;
-}
-
-.about {
-    display: inline-block;
-    width: 48%;
-    margin: 5px;
-}
-
-.image2 {
-    margin: 10px;
-}
-
-.services {
-    display: inline-block;
-    width: 33%;
-}
-
-.product {
-    display: inline-block;
-    width: 33%;
-}
-
-.vision {
-    display: inline-block;
-    width: 33%;
-}
-
-.contact {
-    margin: 10px;
-}
-
-.contact address {
-    text-decoration: none;
-    font-style: normal;
-}
-
-footer {
-    text-align: center;
-    margin: 30px;
-    padding: 30px 0px 100px 0px;
-}
-
-hr {
-    margin: 30px 0px;
-}
+    
+    html,
+    body,
+    div,
+    span,
+    applet,
+    object,
+    iframe,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    blockquote,
+    pre,
+    a,
+    abbr,
+    acronym,
+    address,
+    big,
+    cite,
+    code,
+    del,
+    dfn,
+    em,
+    img,
+    ins,
+    kbd,
+    q,
+    s,
+    samp,
+    small,
+    strike,
+    strong,
+    sub,
+    sup,
+    tt,
+    var,
+    b,
+    u,
+    i,
+    center,
+    dl,
+    dt,
+    dd,
+    ol,
+    ul,
+    li,
+    fieldset,
+    form,
+    label,
+    legend,
+    table,
+    caption,
+    tbody,
+    tfoot,
+    thead,
+    tr,
+    th,
+    td,
+    article,
+    aside,
+    canvas,
+    details,
+    embed,
+    figure,
+    figcaption,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    output,
+    ruby,
+    section,
+    summary,
+    time,
+    mark,
+    audio,
+    video {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        font-size: 100%;
+        font: inherit;
+        vertical-align: baseline;
+    }
+    /* HTML5 display-role reset for older browsers */
+    
+    article,
+    aside,
+    details,
+    figcaption,
+    figure,
+    footer,
+    header,
+    hgroup,
+    menu,
+    nav,
+    section {
+        display: block;
+    }
+    
+    body {
+        line-height: 1;
+    }
+    
+    ol,
+    ul {
+        list-style: none;
+    }
+    
+    blockquote,
+    q {
+        quotes: none;
+    }
+    
+    blockquote:before,
+    blockquote:after,
+    q:before,
+    q:after {
+        content: '';
+        content: none;
+    }
+    
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+    }
+    /* Set every element's box-sizing to border-box */
+    
+    * {
+        box-sizing: border-box;
+    }
+    
+    html,
+    body {
+        height: 100%;
+        font-family: 'Titillium Web', sans-serif;
+    }
+    
+    h1,
+    h2,
+    h3,
+    h4,
+    h5 {
+        font-family: 'Bangers', cursive;
+        letter-spacing: 1px;
+        margin-bottom: 15px;
+    }
+    /* Your code starts here! */
+    
+    @keyframes NavAnimation {
+        from {
+            background-color: blue;
+        }
+        to {
+            Background-color: green;
+        }
+    }
+    
+    body {
+        max-width: 900px;
+        margin: 0px 50px;
+    }
+    
+    nav {
+        display: inline-block;
+        margin: 20px;
+    }
+    
+    nav a {
+        color: lightgrey;
+        margin: 0px 50px 0px 0px;
+        text-decoration: none;
+    }
+    
+    nav a:hover {
+        animation-name: NavAnimation;
+        animation-duration: 2s;
+    }
+    
+    .logo {
+        display: inline-block;
+        margin: 5px 0px;
+    }
+    
+    .content1 {
+        display: inline-block;
+        margin: 10px;
+        width: 48%;
+    }
+    
+    .content1 h1 {
+        display: block;
+        font-size: 80px;
+        text-align: center;
+    }
+    
+    .button {
+        border: 1px solid black;
+        display: block;
+        width: 150px;
+        height: 30px;
+        text-align: center;
+        padding: 5px;
+        margin: 0px 0px 0px 150px;
+    }
+    
+    .button:hover {
+        animation-name: NavAnimation;
+        animation-duration: 2s;
+    }
+    
+    .button a {
+        text-decoration: none;
+        color: black;
+    }
+    
+    .image {
+        display: inline-block;
+        position: relative;
+        left: 50px;
+        top: 30px;
+    }
+    
+    .features {
+        display: inline-block;
+        width: 48%px;
+        margin: 5px;
+    }
+    
+    .about {
+        display: inline-block;
+        width: 48%;
+        margin: 5px;
+    }
+    
+    .image2 {
+        margin: 10px;
+    }
+    
+    .services {
+        display: inline-block;
+        width: 33%;
+    }
+    
+    .product {
+        display: inline-block;
+        width: 33%;
+    }
+    
+    .vision {
+        display: inline-block;
+        width: 33%;
+    }
+    
+    .contact {
+        margin: 10px;
+    }
+    
+    .contact address {
+        text-decoration: none;
+        font-style: normal;
+    }
+    
+    footer {
+        text-align: center;
+        margin: 30px;
+        padding: 30px 0px 100px 0px;
+    }
+    
+    hr {
+        margin: 30px 0px;
+    }
